# voxora_service

./: .gitignore  README.md
Linux-service/: ANYTHINGLLM.md  API_KEY.ini  Cargo.toml  README-UBUNTU.md  SCREEN_CAPTURE_HELPER.md  app.log.txt  command.txt  create-portable-ubuntu.sh  create-portable.ps1  endpoints.txt  install-service.ps1  install-ubuntu.sh  output_2025-10-30_17-47-41.raw  uninstall-ubuntu.sh
Linux-service/data/: settings.json
Linux-service/docs/: 01_ENGLISH_PIPELINE.md  02_HINDI_PIPELINE.md  06_FALLBACK_PIPELINE.md  INSTALL_SERVICE_FIX.md  README.md  SESSIONS.md  UBUNTU-COMPLETE-GUIDE.md
Linux-service/logs/: pcm_en.log.2025-10-27  pcm_en.log.2025-10-31  ws_en.log.2025-10-27  ws_en.log.2025-10-31
Linux-service/scripts/: build_windows.ps1  download_vad_model.ps1
Linux-service/src/: lib.rs  main.rs  secrets.rs  service.rs  ui.rs
Linux-service/src/ai/: gemini.rs  groq.rs
Linux-service/src/sessions/: mod.rs  routes.rs
Linux-service/tests/: pages_smoke.rs  status_vad.rs
window-service/: API_KEY.ini  FIXED-ISSUES.md  GROQ_VISION_FIX.md  NAMED_TUNNEL.md  SESSIONS_IMPLEMENTATION.md  SESSION_SUMMARY.md  app.log.txt  command.txt  endpoints.txt  install-ubuntu.sh  restapi.txt
window-service/data/: api.txt  sessions.db
window-service/docs/: 00_ARCHITECTURE_OVERVIEW.md  03_SCREENSHOT_PIPELINE.md  04_API_ENDPOINTS.md  05_CONFIGURATION_GUIDE.md  07_ANYTHINGLLM_PIPELINE.md  AUTO_SAVE.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENDPOINT_COMPARISON.md
window-service/logs/: pcm_hi.log.2025-10-27  ws_hi.log.2025-10-27
window-service/scripts/: setup_ubuntu.sh
window-service/src/: config.rs  routes.rs  session.rs  startup.rs  state.rs  vad.rs
(+8 files in other folders)
