[package]
name = "voxora-service"
version = "0.1.0"
edition = "2021"

# Binary targets
[[bin]]
name = "voxora-service"
path = "src/main.rs"

[[bin]]
name = "voxora-helper"
path = "src/bin/helper.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "io-std", "time"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
keyring = "2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "std", "ansi"] }
tracing-appender = "0.2"
anyhow = "1"
# New deps for WS client and stream utilities
futures-util = "0.3"
tokio-tungstenite = "0.24"
# HTTP client for AI providers
reqwest = { version = "0.12", features = ["json", "gzip"] }
# Screen capture deps (Windows)
scrap = { version = "0.5" }
image = { version = "0.24", default-features = false, features = ["png"] }
base64 = "0.21"
# For LAN IP detection and QR generation
get_if_addrs = "0.5"
qrcode = "0.13"
# Session management
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Windows API for hiding console window
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser"] }

[features]
default = []

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http = "1"
tempfile = "3"
